2004-02-06  Karl Berry  <karl@gnu.org>

	* po.m4: update from gettext 0.14.1.

2004-02-03  Bruno Haible  <bruno@clisp.org>

	* pipe.m4: New file, from GNU gettext.

2004-01-27  Bruno Haible  <bruno@clisp.org>

	* execute.m4: New file, from GNU gettext.

2003-11-24  Bruno Haible  <bruno@clisp.org>

	* allocsa.m4: New file, from GNU gettext.

2003-11-24  Bruno Haible  <bruno@clisp.org>

	* eealloc.m4: New file, from GNU gettext.

2004-01-15  Paul Eggert  <eggert@twinsun.com>

	Merge from coreutils.

	* jm-macros.m4 (jm_CHECK_ALL_TYPES): Check for uintptr_t.
	* posixver.m4 (gl_POSIXVER): Require gl_DEFAULT_POSIX2_VERSION.
	(gl_DEFAULT_POSIX2_VERSION): Move
	the documentation from 'configure' into 'config.hin',
	so that 'configure --help' isn't burdened by it and
	we don't have to worry about its formatting there.
	Reword the documentation so that it's more succinct
	and can be run together into a single paragraph.
	* same.m4 (gl_SAME): Check for pathconf.

2004-01-15  Jim Meyering  <jim@meyering.net>

	Merge from coreutils.

	* clock_time.m4 (gl_CLOCK_TIME): Don't set LIB_CLOCK_GETTIME
	if no library is required.
	* jm-macros.m4: Don't require UTILS_SYS_OPEN_MAX.
	* jm-macros.m4 (jm_MACROS): Require gl_FUNC_FREE.
	* jm-macros.m4 (jm_MACROS): Require autoconf-2.58.
	(AC_LANG_SOURCE): Remove definition, now that we require autoconf-2.58.
	* jm-macros.m4 (jm_MACROS): Don't require AC_FUNC_FTW.
	* lib-check.m4 (jm_LIB_CHECK): Do not set LIB_CRYPT to the
	value, $ac_cv_search_crypt, if it's "none required".
	* posixver.m4 (gl_DEFAULT_POSIX2_VERSION): New macro.
	* prereq.m4 (jm_PREREQ): Require AC_FUNC_GETLOADAVG,
	not gl_FUNC_GETLOADAVG.
	* prereq.m4 (jm_PREREQ): Require gl_READTOKENS, gl_MD5, gl_MAKEPATH,
	gl_LONG_OPTIONS, and gl_IDCACHE, gl_GETUGROUPS.

2004-01-15  Alexandre Duret-Lutz  <adl@gnu.org>

	Merge from coreutils.

	* nanosleep.m4 (jm_FUNC_NANOSLEEP): Do not set LIB_NANOSLEEP to the
	value, $ac_cv_search_nanosleep, if it's "none required".
